spacing issues resolved

--- a/src/public/css/overrides.css
+++ b/src/public/css/overrides.css
@@ -1,33 +1,34 @@
-﻿.col-xs-6{
-	border:1px solid;
-	background-size: 100% 100%;
-    background-repeat: no-repeat;
-    height:50%;
-    max-height:160px;
-    max-height:80px;
+﻿.row-centered {
+    text-align:center;
+    max-width: 860px;
+    float:none;
+    margin: 0 auto;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    text-align:left;
+}
+.col-fixed {
+    width:140px;
+    height:140px;
+    background-color: red;
+    padding: 0;
+}
+
+.item {
+	/*border:1px solid black;*/
+    width:100%;
+    height:100%;
 }
 
 .about{
-
+	background-image: url("../img/placeholder.png");
+	background-size : 140px 140px;
+	background-repeat : no-repeat;
+	margin-right:-4px;
 }
 
 .footer{
 
-}
-
-.projects-wrapper{
-	max-width: 1200px;
-}
-
-.project-img{
-	min-height: 100px;
-	max-height: 300px;
-}
-
-#projects-container{
-	padding-left: 10%;
-	padding-right: 10%;
-	border: 1px solid red;
-	min-height: 300px;
-	margin-top:12%;
 }
